Mobile_View_Update1

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <div>
             <button class="button-small">Order</button>
           </div>
+          <div class="menu-button1">
+            <img src="./assets/bars-solid (1).svg" alt="" srcset="">
+          </div>
         </nav>
       </section>
       <!-- Hero Section -->
